--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ ead_verification_errors.csv
 beal_classifications.csv
 marc_field_occurrences.csv
 locations.csv
+no_containers.csv
 beal_classifications.csv
 beal_unique_collectionids.txt
 shared/*
