--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ EAD/migration_stats
 EAD/digital_objects
 EAD/exports
 EAD/eads
+EAD/subjects_agents/posted_subjects.csv
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
