--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ EAD/subjects_agents/posted_subjects.csv
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
+MARC/marcxml_no_ead_unjoined
 MARC/marcxml_has_ead
 MARC/marcxml_unknown
 MARC/converted_eads
