--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ EAD/digital_objects
 EAD/exports
 EAD/eads
 EAD/subjects_agents/posted_subjects.csv
+EAD/subjects_agents/aspace_subjects.csv
+EAD/subjects_agents/ead_unique_subjects.csv
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
