--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ EAD/eads
 EAD/subjects_agents/posted_subjects.csv
 EAD/subjects_agents/aspace_subjects.csv
 EAD/subjects_agents/ead_unique_subjects.csv
+EAD/subjects_agents/compound_agents.csv
+EAD/subjects_agents/compound_agent_terms.csv
+EAD/subjects_agents/text_to_authfilenumber.csv
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
