--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ EAD/subjects_agents/ead_unique_subjects.csv
 EAD/subjects_agents/compound_agents.csv
 EAD/subjects_agents/compound_agents_terms.csv
 EAD/subjects_agents/text_to_authfilenumber.csv
+EAD/unitdates_in_unittitles/wonky_unitdate_display_candidates.csv
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
