add post migration eads

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ EAD/migration_stats
 EAD/digital_objects
 EAD/exports
 EAD/eads
+EAD/post_migrations_eads
 EAD/subjects_agents/posted_subjects.csv
 EAD/subjects_agents/aspace_subjects.csv
 EAD/subjects_agents/ead_unique_subjects.csv
