fix extents in lonetree

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ EAD/migration_stats
 EAD/digital_objects
 EAD/exports
 EAD/eads
+EAD/final_aspace_migration_files
 EAD/post_migrations_eads
 EAD/subjects_agents/posted_subjects.csv
 EAD/subjects_agents/aspace_subjects.csv
