--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ EAD/digital_objects
 EAD/exports
 EAD/eads
 EAD/final_aspace_migration_files
-EAD/post_migrations_eads
+EAD/post_migration_eads
 EAD/subjects_agents/posted_subjects.csv
 EAD/subjects_agents/aspace_subjects.csv
 EAD/subjects_agents/ead_unique_subjects.csv
