manual date fixes

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ EAD/exports
 EAD/eads
 EAD/final_aspace_migration_files
 EAD/post_migration_eads
+EAD/post*
 EAD/subjects_agents/posted_subjects.csv
 EAD/subjects_agents/aspace_subjects.csv
 EAD/subjects_agents/ead_unique_subjects.csv
