update MARC scripts

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ EAD/subjects_agents/compound_agents.csv
 EAD/subjects_agents/compound_agents_terms.csv
 EAD/subjects_agents/text_to_authfilenumber.csv
 EAD/unitdates_in_unittitles/wonky_unitdate_display_candidates.csv
+MARC/converted_eads_working
+MARC/converted_eads
 MARC/CSVs
 MARC/marcxml_no_ead
 MARC/marcxml_no_ead_joined
